Use --add-exports and --add-opens for java 9+ in start-rc.sh